test/interp/spec/f64.load32.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/f64.load32.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/f64.load32.fail.wast:1:52: unexpected token "f64.load32"
(module (memory 1) (func (param i32) (result f64) (f64.load32 (get_local 0))))
                                                   ^^^^^^^^^^
third_party/testsuite/f64.load32.fail.wast:1:63: syntax error, unexpected (
(module (memory 1) (func (param i32) (result f64) (f64.load32 (get_local 0))))
                                                              ^

;;; STDERR ;;)
